--- a/app/views/schedules/submits/form_for_missing.html.erb
+++ b/app/views/schedules/submits/form_for_missing.html.erb
@@ -14,6 +14,6 @@ maar vergeet niet om vóór de deadline te submitten!</textarea>
 </div>
 <% end %>
 
-<% content_for :title do %>
+<% content_for :footer do %>
 <input type="submit" class="btn btn-primary" form="missing_form">
 <% end %>
