--- a/app/views/users/_title.html.erb
+++ b/app/views/users/_title.html.erb
@@ -7,7 +7,7 @@
 	<img src="<%= @student.avatar %>" style="max-width:70px; margin-right:1em;" class="pull-left">
 	<% end %>
 	<div>
-	<%= best_in_place @student, :mail, as: :input %> <%= link_to bootstrap_icon("envelope"), "https://secure.helpscout.net/search/?query=#{@student.mail}", target:"_new", remote: false %> (<%= @student.login_id %>)<br>
+	<%= best_in_place @student, :mail, as: :input %> <%= link_to bootstrap_icon("envelope"), "https://secure.helpscout.net/search/?query=#{@student.mail}", target:"_new" %> (<%= @student.login_id %>)<br>
 	Photo URL: <%= best_in_place @student, :avatar, as: :input, url: user_path(id: @student.id) %>
 	</div>
 </div>
