--- a/app/views/admin/users/_group_permissions.html.erb
+++ b/app/views/admin/users/_group_permissions.html.erb
@@ -1,3 +1,3 @@
 <% groups.each do |group| %>
-<%= button_to group.name, admin_user_remove_group_permission_path(user, group_id: group), method: :delete, remote: true, class: 'btn btn-link d-inline p-0' %>,
+<%= button_to group.name, admin_user_remove_group_permission_path(user, group_id: group), method: :delete, class: 'btn btn-link d-inline p-0' %>,
 <% end %>
