--- a/app/views/grading/show.html.erb
+++ b/app/views/grading/show.html.erb
@@ -33,7 +33,7 @@
 	
 	<%= render partial: 'grading_info' %>
 
-	<div ssid="grade" class="d-flex flex-column" style="min-height:100%">
+	<div id="grade" class="d-flex flex-column" style="min-height:100%">
 		<%= render @submit %>
 	</div>
 	
