--- a/app/views/schedules/current_modules/edit.html.erb
+++ b/app/views/schedules/current_modules/edit.html.erb
@@ -2,7 +2,7 @@
 <h1>Set current module for <%= @schedule.name %></h1>
 <% end %>
 
-<%= form_with url: schedule_current_module_path(@schedule), method: :put, local: false do |form| %>
+<%= form_with url: schedule_current_module_path(@schedule), method: :put, data: { 'turbo-frame': 'sidebar-frame' } do |form| %>
 	<% @schedule.schedule_spans.each do |item| %>
 	<div class="mb-1">
 		<%= form.radio_button(:item, item.id, checked: item == @schedule.current, id: "#{@schedule.name}#{item.id}", class: 'set-schedule', onclick: 'Rails.fire(form, "submit");') %>
