--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
 <body class="<%= @body_class || controller.controller_name %>">
 	<%= content_for?(:body) ? yield(:body) : yield %>
-	<%= render partial: "modal_browser" if current_user.senior? || controller.controller_name == 'overviews' %>
+	<%= render partial: "modal_browser" if current_user.senior? || ['overviews', 'home'].include?(controller.controller_name) %>
 </body>
 
 <% end %>
