--- a/app/views/schedules/generate_groups/new.html.erb
+++ b/app/views/schedules/generate_groups/new.html.erb
@@ -6,7 +6,11 @@
 
 <p><strong>Do not use if groups have been generated before and TAs are/have been grading!!</strong></p>
 
-<%= form_tag schedule_generate_groups_path(schedule_id: params[:schedule_id]), method: :post, data: { 'turbo-frame' => '_top' }, id: 'generate_groups_form' do %>
+<%= form_tag schedule_generate_groups_path(
+		schedule_id: params[:schedule_id]),
+		method: :post,
+		data: { 'turbo-frame' => '_top' },
+		id: 'generate_groups_form' do %>
 	<p class="mb-3"><input type="number" name="number" min="1" required></p>
 <% end %>
 
