--- a/app/views/application/_sidebar_content.html.erb
+++ b/app/views/application/_sidebar_content.html.erb
@@ -1,4 +1,3 @@
-<div id="sidebar-content" data-turbolinks-permanent class="sidebar-collapse sidebar-scroller flex-grow-1 turbolinks-disable-scroll collapse">
 
 
 	<% if Course.modules.any? %>
@@ -17,15 +16,28 @@
 	<% if current_module %>
 	<ul class="nav">
 		<li>
-			<p class="nav-head mx-1 text-dark">
-				<span id="schedule_name" class="<%= 'unavailable' if !current_module.public? %>"><%= current_module.name %></span>
+			<div class="nav-head mx-1 text-dark d-flex justify-content-between">
+				<div id="schedule_name" class="<%= 'unavailable' if !current_module.public? %>">
+					<%#= current_module.name %>
+					<div class="dropdown">
+						<button class="btn btn-link nav-head text-dark m-0 p-0 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+							<%= current_module.name %>
+						</button>
+
+						<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<% current_schedule.schedule_spans.accessible.each do |mod| %>
+							<li><%= link_to mod.name, profile_set_path(module: mod.id), method: :post, remote: true, class: 'dropdown-item' %></li>
+							<% end %>
+						</ul>
+					</div>
+				</div>
 				<% if current_schedule.self_service %>
-				<span class="float-right mr-n1 spr-1">
+				<span class="float-rsight mr-n1 spr-1">
 					<%= link_to bootstrap_icon('chevron-left', class: 'rounded').html_safe, prev_module.present? ? profile_prev_path : '', method: :post, remote: true, id: 'schedule_prev_button', disabled:!prev_module.present? %>
 					<%= link_to bootstrap_icon('chevron-right', class: 'rounded').html_safe, next_module.present? ? profile_next_path : '', method: :post, remote: true, id: 'schedule_next_button', disabled:!next_module.present? %>
 				</span>
 				<% end %>
-			</p>
+			</div>
 		</li>
 		<li id="schedule">
 			<%= links_to_ul(current_module.content) %>
@@ -60,5 +72,3 @@
 		</li>
 	</ul>
 	<% end %>
-
-</div>
