add schedule dropdown

--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -216,7 +216,7 @@
 
 //****************************************************************************
 
-#schedule_name.unavailable
+.unavailable
 {
 	text-decoration:line-through;
 }
