--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -23,6 +23,7 @@
 	<%= menu_link 'Course administration...', admin_course_path, icon: 'inboxes', target: 'modal' %>
 	<%= menu_link 'Site configuration...', admin_site_path, icon: 'wrench', target: 'modal' %>
 	<%= menu_link 'Edit permissions...', admin_users_path, icon: 'unlock', target: 'modal' %>
+	<%= menu_link 'Hands statistics...', hands_statistics_path, icon: 'hand', target: 'modal' %>
 	<%= menu_link 'Update courseware', admin_update_path, icon: 'download', method: :post %>
 <% end %>
 
