--- a/app/views/hands/statistics/show.html.erb
+++ b/app/views/hands/statistics/show.html.erb
@@ -1,8 +1,49 @@
-<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
-<%= timeline @chart_data, height: "500px" %>
+<% content_for :title do %>
+<h1>Hands statistics</h1>
+<% end %>
+
+<h3 class="mb-3">Today</h3>
 
 <table class="table caption-top">
-	<caption class="text-center">Questions per hour</caption>
+	<thead>
+		<tr>
+			<th scope="col">Name</th>
+			<th scope="col">Hands (<%= @chart_start.strftime('%H:%M') %>&ndash;<%= @chart_end.strftime('%H:%M') %>)</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @chart_groups.each do |u,items| %>
+		<tr>
+			<td class="text-nowrap"><%= u %></td>
+			<td class="w-100 align-middle">
+				<div class="progress">
+					<% prev=@chart_start %>
+					<% items.each do |i|%>
+					<% this_start = i.second
+					   this_end = i.third
+					   margin = (this_start-prev).to_i.to_f/(@chart_end-@chart_start).to_i*100
+					   width = (this_end-this_start).to_i.to_f/(@chart_end-@chart_start).to_i*100
+					   minutes = (this_end-this_start).to_i/60
+					   %>
+					<div class="progress-bar border-right"
+						data-toggle="tooltip" data-placement="top" title="<%= minutes %> mins"
+						role="progressbar"
+						style="margin-left:<%= margin %>%; width: <%= width %>%"
+						aria-valuenow="15"
+						aria-valuemin="0"
+						aria-valuemax="100"></div>
+						<% prev=this_end %>
+					<% end %>
+				</div>
+			</td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
+
+<h3 class="mt-5 mb-3">Questions per hour over the past week</h3>
+
+<table class="table caption-top">
 	<thead>
 		<tr>
 			<th>hour/date</th>
@@ -23,8 +64,9 @@
 	</tbody>
 </table>
 
+<h3 class="mt-5 mb-3">Recent questions</h3>
+
 <table class="table caption-top">
-	<caption class="text-center">Recent questions</caption>
 	<tr>
 		<th>created</th>
 		<th>closed</th>
@@ -36,7 +78,7 @@
 	</tr>
 	<% @today.each do |entry| %>
 	<tr>
-		<td><span data-placement="bottom" data-toggle="tooltip" title="<%= entry.help_question %>"><%= entry.created_at.strftime("%H:%M") %></span></td>
+		<td><span data-placement="bottom" data-toggle="tooltip" title="<%= entry.help_question %>"><%= entry.created_at.strftime("%a %H:%M") %></span></td>
 		<td>
 			<% if entry.done && entry.success %>
 			<span class="text-success">v</span>
