--- a/app/views/hands/statistics/show.html.erb
+++ b/app/views/hands/statistics/show.html.erb
@@ -26,7 +26,7 @@
 					   minutes = (this_end-this_start).to_i/60
 					   %>
 					<div class="progress-bar border-right"
-						data-toggle="tooltip" data-placement="top" title="<%= minutes %> mins"
+						data-toggle="tooltip" data-placement="top" title="<%= pluralize minutes, "minutes" %>"
 						role="progressbar"
 						style="margin-left:<%= margin %>%; width: <%= width %>%"
 						aria-valuenow="15"
