tabify user modal, add menu for watches

--- a/app/views/application/_float_nav.html.erb
+++ b/app/views/application/_float_nav.html.erb
@@ -5,6 +5,12 @@
 	</div>
 	<% end %>
 
+	<% if current_user.admin? && User.watching.any? %>
+	<div>
+		<%= render partial: 'watches' %>
+	</div>
+	<% end %>
+
 	<%# Admin user search%>
 
 	<% if Settings.hands_allow && current_user.valid_profile? %>
