--- a/app/views/users/_title.html.erb
+++ b/app/views/users/_title.html.erb
@@ -86,4 +86,16 @@
 		</div>
 	</div>
 
+	<ul class="nav nav-tabs mt-3 mb-n3 border-bottom-0" id="submit_tab" role="tablist">
+		<li class="nav-item">
+			<a class="nav-link active" id="submit-notes-tab" data-toggle="tab" href="#submit-notes" role="tab" aria-controls="home" aria-selected="true">Timeline</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" id="submit-attendance-tab" data-toggle="tab" href="#submit-attendance" role="tab" aria-controls="home" aria-selected="true">Attendance</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" id="submit-hands-tab" data-toggle="tab" href="#submit-hands" role="tab" aria-controls="home" aria-selected="true">Hands</a>
+		</li>
+	</ul>
+
 </div>
