don't use turbo for course updates

--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -24,7 +24,7 @@
 	<%= menu_link 'Site configuration...', admin_site_path, icon: 'wrench', target: 'modal' %>
 	<%= menu_link 'Edit permissions...', admin_users_path, icon: 'unlock', target: 'modal' %>
 	<%= menu_link 'Hands statistics...', hands_statistics_path, icon: 'hand', target: 'modal' %>
-	<%= menu_link 'Update courseware', admin_update_path, icon: 'download', method: :post %>
+	<%= menu_link 'Update courseware', admin_update_path, icon: 'download', method: :post, data: { turbo: "false" } %>
 <% end %>
 
 <% elsif current_user.head? %>
