update user modal with timeline

--- a/app/assets/stylesheets/includes/timeline.scss
+++ b/app/assets/stylesheets/includes/timeline.scss
@@ -31,8 +31,8 @@
 .timeline-item
 {
 	border:none;
-	border-bottom:1px solid #FAFAFA;
-	padding-bottom:1rem;
+//    border-bottom:1px solid #FAFAFA;
+//    padding-bottom:1rem;
 	margin-bottom:1rem;
 	border-color:#f3f3f3;
 	
