--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
 <div class="timeline-item">
-	<div class="card-body">
+	<div class="card-body p-0">
 		<%= render partial: "items/#{item.class.to_s.downcase}", object: item %>
 	</div>
 </div>
