--- a/app/views/items/_note.html.erb
+++ b/app/views/items/_note.html.erb
@@ -1,12 +1,26 @@
 <%= turbo_frame_tag "note-#{note.id}" do %>
-<div class="float-right"><%= link_to bootstrap_icon('pen'), edit_note_path(note) %></div>
 <div class="d-flex">
 	<% if note.assignee.present? %>
-	<%= button_to [note, note: {done: !note.done} ], method: :patch, class: 'btn btn-link btn-lg' do bootstrap_icon(note.done && 'check-square' || 'square', width: 32, height: 32) end %>
+	<%= button_to [note, note: {done: !note.done} ], method: :patch, class: 'btn btn-link btn-lg pl-0' do bootstrap_icon(note.done && 'check-square' || 'square', width: 32, height: 32) end %>
 	<% end %>
-	<div class=" bg-light rounded-3 p-3">
-		<%= simple_markdown(note.text) %>
-		<div class="text-dark"><small class="author"><%= note.author_name %></small><br><small><%= date_span_with_title(note.created_at)%></small></div>
+	<% if note.log %>
+	<div class=" bg-light rounded-3 p-2 small">
+		<%= note.text %> by
+		<%= note.author_name %> (<%= date_span_with_title(note.created_at)%>)
 	</div>
+	<% else %>
+	<div class=" bg-light rounded-3 p-3">
+		<div class="text-dark d-flex justify-content-between pb-2">
+			<small class="author fw-bold"><%= note.author_name %></small>
+			<small class="ml-3">
+				<%= date_span_with_title(note.created_at)%>
+				<% if !note.log %>
+				<%= link_to bootstrap_icon('pen', height: 16, width: 16, style: 'vertical-align: sub;'), edit_note_path(note) %>
+				<% end %>
+			</small>
+		</div>
+		<%= simple_markdown(note.text) %>
+	</div>
+	<% end %>
 </div>
 <% end %>
