improve change logging and status editing

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
 <div class="timeline-item">
-	<div class="card-body bg-light rounded-3 p-2 d-inline-block">
+	<div class="card-body bg-light rounded-3 py-2 px-3 d-inline-block">
 		<%= render partial: "items/#{item.class.to_s.downcase}", object: item %>
 	</div>
 </div>
