--- a/app/views/users/_title.html.erb
+++ b/app/views/users/_title.html.erb
@@ -5,13 +5,17 @@
 	<img src="<%= @student.avatar %>" style="max-width:70px; margin-right:1em;" class="pull-left">
 	<% end %>
 
-	<h1 class="mb-1"><%= @student.name %> <small class="ml-3"><%= @student.login_id %> - <%= @student.mail %></small></h1>
+	<h1 class="mb-1">
+		<%= @student.name %>
+		<small class="ml-3"><%= @student.login_id %> - <%= @student.mail %></small>
+		<%= link_to bootstrap_icon('pencil', width: 16), edit_user_path(@student), class: 'px-2' %>
+	</h1>
 	<% if @student.status.present? %>
 	<p class="m-0"><%= @student.status %></p>
 	<% end %>
-	<%= render 'toolbar' %>
-
 	<% end %>
+
+	<%= render 'toolbar' %>
 
 	<ul class="nav nav-tabs mt-3 mb-n3 border-bottom-0" id="submit_tab" role="tablist">
 		<li class="nav-item">
