--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,22 +1,19 @@
 <div class="flex-fill">
 	<%= turbo_frame_tag :user_form do %>
 		<%= form_with model: @student do |f| %>
-			<p>
-				<%= f.label :name %><br>
-				<%= f.text_field :name %>
-			</p>
-			<p>
-				<%= f.label :mail %><br>
-				<%= f.text_field :mail %>
-			</p>
-			<p>
-				<%= f.label :avatar %><br>
-				<%= f.text_field :avatar %>
-			</p>
-			<p>
-				<%= f.submit 'Save', class: 'btn btn-secondary' %>
-				<%= link_to 'Cancel', @student, class: 'btn btn-secondary' %>
-			</p>
+		<p>
+			<%= f.text_field :name,   placeholder: 'Full name', autocomplete: 'off' %>
+			<%= f.text_field :mail,   placeholder: 'E-mail',    autocomplete: 'off' %><br>
+			<%= f.text_field :status, placeholder: 'Status',    autocomplete: 'off' %>
+		</p>
+		<p>
+			<%= f.label :avatar %>:
+			<%= f.text_field :avatar %>
+		</p>
+		<p>
+			<%= f.submit 'Save', class: 'btn btn-secondary' %>
+			<%= link_to 'Cancel', @student, class: 'btn btn-secondary' %>
+		</p>
 		<% end %>
 	<% end %>
 </div>
