--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -102,8 +102,9 @@ span.bubble {
 
 .grade-button
 {
+	line-height: 1.1;
 	font-size: x-small;
-	padding: 0.15rem;
+	padding: 0.2rem;
 	border: none;
 }
 
