--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -37,7 +37,7 @@
 
 	<% user_list.each do |user| %>
 	<% cache [user, :head_overview] do %>
-	<tr <%= 'class=table-warning' if user.stagnated? %>>
+	<tr <%= 'class=table-warning' if @show_inactive && user.stagnated? %>>
 		<td>
 			<%= link_to user.name, user, data: { toggle: "modal" }, target: "modal" %>
 			<% if user.last_known_location %>
@@ -51,8 +51,6 @@
 			<%= bootstrap_icon 'exclamation-triangle-fill' %>
 			<% end %>
 		</td>
-
-		<!-- <td class="px-3"></td> -->
 
 		<td class="bar"><%= user.attendance %></td>
 
